gabblewunker implemented: good luck sleeping at night

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <script type="text/javascript" src="sceneGameOver.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="entity.js"></script>
+    <script type="text/javascript" src="fish.js"></script>
 </body>
 </html>
