scales for mobile

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Stan-O-War-II</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src=""></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="phaser-app"></div> 
     <script type="text/javascript" src="sceneMainMenu.js"></script>
     <script type="text/javascript" src="sceneMain.js"></script>
     <script type="text/javascript" src="sceneCutsceneStart.js"></script>
